@@ -15,6 +15,8 @@ debian-installer (20040531) UNRELEASED; urgency=low
       is full again.
   * Joshua Kwan
     - Fix sparc64 CDs for good. I think.
+  * Thiemo Seufer
+    - Build system update.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 31 May 2004 22:14:32 -0300
 
